// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Lists BasicList renders 1`] = `
<Fragment>
  <h2
    id="basic-list"
  >
    Basic list
  </h2>
  <p>
    Basic lists info...
    <Property
      value=".list"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list"
    >
      <li>
        Bread
      </li>
      <li>
        Coffee beans
      </li>
      <li>
        Milk
      </li>
      <li>
        Butter
      </li>
    </ul>
  </ComponentPreview>
  <h3>
    Nested list
  </h3>
  <p>
    Nested lists are also pretty sweet...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list"
    >
      <li>
        Coffee
      </li>
      <li>
        Tea
        <ul>
          <li>
            Black tea
          </li>
          <li>
            Green tea
          </li>
          <li>
            Ice tea
          </li>
        </ul>
      </li>
      <li>
        Milk
      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists DescriptionList renders 1`] = `
<Fragment>
  <h2
    id="description-list"
  >
    Description list
  </h2>
  <p>
    Description lists info...
    <Property
      value=".description-list"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <dl
      className="description-list"
    >
      

      <dt>
        Frog
      </dt>
      <dd>
        Wet green thing that croaks.
      </dd>
      

      <dt>
        Rabbit
      </dt>
      <dd>
        Warm fluffy thing that jumps.
      </dd>
      

      <dt>
        Color
      </dt>
      <dd>
        Any hue except white or black.
      </dd>
      

    </dl>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists InlineList renders 1`] = `
<Fragment>
  <h2
    id="inline-list"
  >
    Inline list
  </h2>
  <p>
    Inline lists info...
    <Property
      value=".list-inline"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="list list-inline"
    >
      <li>
        Coffee
      </li>
      <li>
        Tea
      </li>
      <li>
        Milk
      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists ListsText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Lots of cool info about lists will be here...
  </p>
  <BasicList />
  <InlineList />
  <DescriptionList />
  <SettingsList />
  <ItemList />
  <StatusItemList />
  <StripedItemList />
</div>
`;

exports[`Documentation: Lists SettingsList renders 1`] = `
<Fragment>
  <h2
    id="settings-list"
  >
    Settings list
  </h2>
  <p>
    Settings lists info...
    <Property
      value=".settings-list"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ul
      className="settings-list"
    >
      <li>
        

        <i
          className="material-icons color-success"
        >
          check
        </i>
        Shovels and tapestry newsletter
        

      </li>
      <li>
        

        <i
          className="material-icons color-warning"
        >
          remove
        </i>
        Spoon collectors weekly newsletter
        

      </li>
      <li>
        

        <i
          className="material-icons color-danger"
        >
          clear
        </i>
        Energetic squirrels newsletter
        

      </li>
    </ul>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Lists renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <ListsText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
